# lab06_hw

./: CMakeLists.txt
.github/workflows/: cpack.yml
formatter_ex_lib/: CMakeLists.txt
solver_lib/: CMakeLists.txt
